--- a/SyncFileFolder/SyncFileFolder.resx
+++ b/SyncFileFolder/SyncFileFolder.resx
@@ -283,6 +283,9 @@
         0vCypH83e5r/Aua5XqmiMkdLAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="metroMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>846, 17</value>
+  </metadata>
   <metadata name="imagesBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>332, 17</value>
   </metadata>
